--- a/AppRpgEtec/Views/Personagens/ListagemView.xaml
+++ b/AppRpgEtec/Views/Personagens/ListagemView.xaml
@@ -6,10 +6,16 @@
     <ScrollView>
         <VerticalStackLayout Padding="10, 0, 0, 0" VerticalOptions="FillAndExpand">
             <Button Command="{Binding NovoPersonagem}" Text="Novo" HorizontalOptions="FillAndExpand"></Button>
-                <ListView x:Name="listView" HasUnevenRows="True" ItemsSource="{Binding Personagens}" >
+                <ListView x:Name="listView" HasUnevenRows="True" ItemsSource="{Binding Personagens}" 
+                          SelectedItem="{Binding PersonagemSelecionado}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
+                            <ViewCell.ContextActions>
+                                <MenuItem Text="Remover" IsDestructive="true" 
+                                    Command="{Binding Path=BindingContext.RemoverPersonagemCommand, Source={x:Reference listView}}"
+                                    CommandParameter="{Binding .}"></MenuItem>
+                            </ViewCell.ContextActions>
                             <StackLayout Padding="10">
                                 <Label Text="{Binding Nome}" FontSize="18" FontAttributes="Bold"/>
                                 <Label Text="{Binding PontosVida}" FontSize="14"/>
