--- a/AppRpgEtec/AppShell.xaml
+++ b/AppRpgEtec/AppShell.xaml
@@ -4,32 +4,14 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AppRpgEtec"
+    xmlns:viewsPersonagens="clr-namespace:AppRpgEtec.Views.Personagens"
     Shell.FlyoutBehavior="Flyout"
     Title="AppRpgEtec">
 
-    <TabBar>
-        <ShellContent
-            Title="Home"
-            ContentTemplate="{DataTemplate local:MainPage}"
-            Route="MainPage" />
-        <ShellContent
-            Title="Home"
-            ContentTemplate="{DataTemplate local:MainPage}"
-            Route="MainPage" />
-    </TabBar>
-   
-    <FlyoutItem Title="Home">
-        <ShellContent
-            Title="Home"
-            ContentTemplate="{DataTemplate local:MainPage}"
-            Route="MainPage" />
-    </FlyoutItem>
 
-    <FlyoutItem Title="Personagens">
-        <ShellContent
+    <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate viewsPersonagens:ListagemView}"
         Route="MainPage" />
-    </FlyoutItem>
 
 </Shell>
