--- a/AppRpgEtec/Views/Personagens/CadastroPersonagemView.xaml
+++ b/AppRpgEtec/Views/Personagens/CadastroPersonagemView.xaml
@@ -6,7 +6,9 @@
              Title="CadastroPersonagemView">
     <ScrollView>
         <VerticalStackLayout Spacing="3" Padding="15">
-
+            <Label Text="Id" FontSize="Medium" />
+            <Entry Text="{Binding Id}" FontSize="Medium" />
+            
             <Label Text="Nome" FontSize="Medium" />
             <Entry Text="{Binding Nome}" FontSize="Medium" />
 
