--- a/AppRpgEtec/AppShell.xaml
+++ b/AppRpgEtec/AppShell.xaml
@@ -2,12 +2,18 @@
     x:Class="AppRpgEtec.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:conv="clr-namespace:AppRpgEtec.Converters"
     xmlns:local="clr-namespace:AppRpgEtec"
     xmlns:viewsUsuarios="clr-namespace:AppRpgEtec.Views.Usuarios"
     xmlns:viewsPersonagens="clr-namespace:AppRpgEtec.Views.Personagens"
     xmlns:viewsDisputas="clr-namespace:AppRpgEtec.Views.Disputas"
     Title="AppRpgEtec">
 
+    <Shell.Resources>
+        <ResourceDictionary>
+            <conv:ByteArrayToImageSourceConverter x:Key="ByteArrayToImage" />
+        </ResourceDictionary>
+    </Shell.Resources>
 
     <Shell.FlyoutHeaderTemplate>
         <DataTemplate>
@@ -20,7 +26,7 @@
                 <FlexLayout Grid.Row="0" Direction="Row" AlignItems="Center">
                     <Frame Padding="0" CornerRadius="40"
                            HeightRequest="80" WidthRequest="80">
-
+                        <Image Source="{Binding Foto, Converter={StaticResource ByteArrayToImage}}" />
                     </Frame>
                     <VerticalStackLayout Padding="10,0,0,0" Spacing="0">
                         <Label Text="App RPG Etec" FontAttributes="Bold" FontSize="Medium" />
@@ -51,9 +57,14 @@
             ContentTemplate="{DataTemplate viewsDisputas:ListagemView}" />
 
         <Tab Title="Info" Route="info" Icon="info.svg">
-            <ShellContent Title="Sobre" Route="sobre" ContentTemplate="{DataTemplate local:AboutView}" />
+            <ShellContent Title="Usuario" Route="usuario"
+                          ContentTemplate="{DataTemplate viewsUsuarios:ImagemUsuarioView}" />
+            
+            <ShellContent Title="Sobre" Route="sobre" 
+                          ContentTemplate="{DataTemplate local:AboutView}" />
 
-            <ShellContent Title="Descrição" Route="desc" ContentTemplate="{DataTemplate local:DescriptionView}" />
+            <ShellContent Title="Descrição" Route="desc" 
+                          ContentTemplate="{DataTemplate local:DescriptionView}" />
         </Tab>
     </FlyoutItem>
 
